--- a/index.html
+++ b/index.html
@@ -171,91 +171,125 @@
             });
         }
 
-        // API 호출 함수 (429 오류 대비 응답 검증 추가)
-        async function fetchLottoData(drwNo) {
-            const url = `https://cors-anywhere.herokuapp.com/https://www.dhlottery.co.kr/common.do?method=getLottoNumber&drwNo=${drwNo}`;
-            try {
-                const response = await fetch(url);
-                if (!response.ok) {
-                    console.error(`회차 ${drwNo} 요청 실패: ${response.status} ${response.statusText}`);
-                    return null;
-                }
-                const text = await response.text(); // 먼저 텍스트로 받음
-                let data;
+        // API 호출 함수 (allorigins.win 사용)
+        async function fetchLottoData(drwNo, retries = 3) {
+            const url = `https://api.allorigins.win/get?url=${encodeURIComponent(`https://www.dhlottery.co.kr/common.do?method=getLottoNumber&drwNo=${drwNo}`)}`;
+            for (let attempt = 0; attempt < retries; attempt++) {
                 try {
-                    data = JSON.parse(text); // JSON 파싱 시도
-                } catch (e) {
-                    console.error(`회차 ${drwNo} JSON 파싱 실패:`, text);
-                    return null;
-                }
-                if (data.returnValue === 'success') {
-                    return {
-                        drwNo: data.drwNo,
-                        drwNoDate: data.drwNoDate,
-                        numbers: [data.drwtNo1, data.drwtNo2, data.drwtNo3, data.drwtNo4, data.drwtNo5, data.drwtNo6],
-                        bnusNo: data.bnusNo
-                    };
-                } else {
-                    console.log(`회차 ${drwNo}: 데이터 없음`);
-                    return null;
-                }
-            } catch (error) {
-                console.error(`회차 ${drwNo} 가져오기 실패:`, error.message);
-                return null;
-            }
-        }
-
-        // 모든 회차 가져오기 (요청 제한 고려)
-        async function fetchAllLottoData() {
-            const latestDrwNo = 1100; // 동적 확인 필요 시 수정
-            const existingDrwNos = new Set(lottoData.map(d => d.drwNo));
-            let failedAttempts = 0;
-            const maxAttempts = 5; // 연속 실패 허용 횟수
-
-            for (let i = 1; i <= latestDrwNo; i++) {
-                if (!existingDrwNos.has(i)) {
-                    const data = await fetchLottoData(i);
-                    if (data) {
-                        lottoData.push(data);
-                        existingDrwNos.add(i);
-                        console.log(`${i}회차 가져오기 완료`);
-                        failedAttempts = 0; // 성공 시 실패 카운트 초기화
-                    } else {
-                        failedAttempts++;
-                        if (failedAttempts >= maxAttempts) {
-                            alert('연속 실패 횟수 초과로 중단합니다. 잠시 후 다시 시도해주세요.');
-                            break;
+                    const response = await fetch(url);
+                    if (!response.ok) {
+                        console.error(`회차 ${drwNo} 요청 실패: ${response.status} ${response.statusText}`);
+                        if (response.status === 429) {
+                            await new Promise(resolve => setTimeout(resolve, 10000));
+                            continue;
                         }
+                        return null;
+                    }
+                    const data = await response.json();
+                    const contents = JSON.parse(data.contents);
+                    if (contents.returnValue === 'success') {
+                        return {
+                            drwNo: contents.drwNo,
+                            drwNoDate: contents.drwNoDate,
+                            numbers: [contents.drwtNo1, contents.drwtNo2, contents.drwtNo3, contents.drwtNo4, contents.drwtNo5, contents.drwtNo6],
+                            bnusNo: contents.bnusNo
+                        };
+                    } else {
+                        console.log(`회차 ${drwNo}: 데이터 없음`);
+                        return null;
+                    }
+                } catch (error) {
+                    console.error(`회차 ${drwNo} 가져오기 실패 (시도 ${attempt + 1}/${retries}):`, error.message);
+                    if (attempt < retries - 1) {
+                        await new Promise(resolve => setTimeout(resolve, 5000));
                     }
                 }
-                await new Promise(resolve => setTimeout(resolve, 2000)); // 2초 대기
+            }
+            console.error(`회차 ${drwNo} 최종 실패`);
+            return null;
+        }
+
+        // 최신 회차 번호 동적 확인
+        async function getLatestDrwNo() {
+            let drwNo = 1100; // 기본값
+            let found = false;
+            while (!found && drwNo < 1200) { // 1200까지 탐색
+                const data = await fetchLottoData(drwNo);
+                if (data) {
+                    found = true; // 최신 데이터가 있는 경우
+                } else {
+                    drwNo--; // 데이터 없는 경우 이전 회차로
+                    if (drwNo <= 1100) break; // 안전 범위
+                }
+                await new Promise(resolve => setTimeout(resolve, 1000)); // 속도 조절
+            }
+            return found ? drwNo : 1100; // 최신 회차 반환, 실패 시 기본값
+        }
+
+        // 모든 회차 가져오기
+        async function fetchAllLottoData() {
+            const latestDrwNo = await getLatestDrwNo(); // 동적으로 최신 회차 가져오기
+            const batchSize = 20;
+            const existingDrwNos = new Set(lottoData.map(d => d.drwNo));
+            let failedAttempts = 0;
+            const maxAttempts = 5;
+
+            for (let start = 1; start <= latestDrwNo; start += batchSize) {
+                const end = Math.min(start + batchSize - 1, latestDrwNo);
+                for (let i = start; i <= end; i++) {
+                    if (!existingDrwNos.has(i)) {
+                        const data = await fetchLottoData(i);
+                        if (data) {
+                            lottoData.push(data);
+                            existingDrwNos.add(i);
+                            console.log(`${i}회차 가져오기 완료`);
+                            failedAttempts = 0;
+                        } else {
+                            failedAttempts++;
+                            if (failedAttempts >= maxAttempts) {
+                                alert(`연속 ${maxAttempts}회 실패로 중단. ${i-1}회차까지 가져왔습니다.`);
+                                break;
+                            }
+                        }
+                    }
+                    await new Promise(resolve => setTimeout(resolve, 3000));
+                }
+                if (failedAttempts >= maxAttempts) break;
             }
 
             lottoData.sort((a, b) => a.drwNo - b.drwNo);
             localStorage.setItem('lottoData', JSON.stringify(lottoData));
             displayLottoData();
-            alert('모든 회차 데이터를 가져왔습니다!');
+            alert(`모든 회차 데이터를 가져왔습니다! (최신: ${latestDrwNo}회차)`);
         }
 
         // 최신 회차 업데이트
         async function updateLatestLotto() {
             const latestStored = lottoData.length > 0 ? Math.max(...lottoData.map(d => d.drwNo)) : 0;
-            let latestDrwNo = latestStored + 1;
-            let newData = await fetchLottoData(latestDrwNo);
-
-            if (newData && !lottoData.some(d => d.drwNo === newData.drwNo)) {
-                lottoData.push(newData);
-                lottoData.sort((a, b) => a.drwNo - b.drwNo);
-                localStorage.setItem('lottoData', JSON.stringify(lottoData));
-                displayLottoData();
-                alert(`${latestDrwNo}회차가 업데이트되었습니다!`);
-            } else {
-                alert('이미 최신 데이터이거나 가져올 수 없습니다.');
+            const latestDrwNo = await getLatestDrwNo();
+            if (latestStored >= latestDrwNo) {
+                alert('이미 최신 데이터입니다.');
+                return;
             }
+            for (let i = latestStored + 1; i <= latestDrwNo; i++) {
+                const newData = await fetchLottoData(i);
+                if (newData && !lottoData.some(d => d.drwNo === newData.drwNo)) {
+                    lottoData.push(newData);
+                    console.log(`${i}회차 업데이트 완료`);
+                }
+                await new Promise(resolve => setTimeout(resolve, 3000));
+            }
+            lottoData.sort((a, b) => a.drwNo - b.drwNo);
+            localStorage.setItem('lottoData', JSON.stringify(lottoData));
+            displayLottoData();
+            alert(`최신 회차(${latestDrwNo})까지 업데이트되었습니다!`);
         }
 
-        // 페이지 로드 시 데이터 표시
-        window.onload = displayLottoData;
+        // 페이지 로드 시 자동 실행 (선택적)
+        window.onload = () => {
+            displayLottoData();
+            // fetchAllLottoData(); // 자동 실행 원하면 주석 해제
+        };
     </script>
 </body>
 </html>
