--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lotto-Analyzer</title>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         body {
             background: linear-gradient(135deg, #0d0d1b 0%, #1f2a44 100%);
@@ -43,7 +44,8 @@
             display: flex;
             justify-content: center;
             gap: 20px;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
+            flex-wrap: wrap;
         }
         button {
             background: linear-gradient(45deg, #00f7ff, #ff00cc);
@@ -110,6 +112,10 @@
         #lottoList::-webkit-scrollbar-track {
             background: rgba(255, 255, 255, 0.1);
         }
+        canvas {
+            max-width: 100%;
+            margin: 20px 0;
+        }
         @keyframes fadeInUp {
             from { opacity: 0; transform: translateY(50px); }
             to { opacity: 1; transform: translateY(0); }
@@ -125,7 +131,7 @@
         @media (max-width: 600px) {
             h1 { font-size: 2.2em; }
             .container { padding: 20px; }
-            button { padding: 12px 20px; font-size: 1em; }
+            button { padding: 12px 20px; font-size: 0.9em; }
             .lotto-entry { font-size: 0.9em; padding: 15px; }
         }
     </style>
@@ -137,12 +143,23 @@
             <button onclick="fetchAllLottoData()">모든 회차 가져오기</button>
             <button onclick="updateLatestLotto()">최신 회차 업데이트</button>
         </div>
+        <div class="button-group">
+            <button onclick="analyzeFrequency()">빈도 분석</button>
+            <button onclick="analyzeEvenOdd()">짝수/홀수 분석</button>
+            <button onclick="analyzeSum()">합계 분석</button>
+            <button onclick="analyzeRange()">범위 분석</button>
+            <button onclick="analyzeConsecutive()">연속 숫자 분석</button>
+            <button onclick="recommendNumbers()">추천 번호</button>
+            <button onclick="displayLottoData()">목록으로 돌아가기</button>
+        </div>
         <div id="lottoList"></div>
     </div>
 
     <script>
-        // 로컬 스토리지에서 데이터 로드
         let lottoData = [];
+        let currentChart = null;
+
+        // 로컬 스토리지에서 데이터 로드
         try {
             const storedData = localStorage.getItem('lottoData');
             if (storedData) {
@@ -159,6 +176,7 @@
         function displayLottoData() {
             const lottoList = document.getElementById('lottoList');
             lottoList.innerHTML = '';
+            if (currentChart) currentChart.destroy();
             if (!Array.isArray(lottoData) || lottoData.length === 0) {
                 lottoList.textContent = '아직 로또 데이터가 없습니다.';
                 return;
@@ -306,11 +324,194 @@
             alert(`최신 회차(${latestFound})까지 업데이트되었습니다!`);
         }
 
+        // 빈도 분석
+        function analyzeFrequency() {
+            const lottoList = document.getElementById('lottoList');
+            lottoList.innerHTML = '<p>각 숫자의 주 번호 빈도수를 분석합니다.</p>';
+            if (currentChart) currentChart.destroy();
+
+            const frequency = Array(45).fill(0);
+            lottoData.forEach(entry => {
+                entry.numbers.forEach(num => frequency[num - 1]++);
+            });
+
+            const canvas = document.createElement('canvas');
+            lottoList.appendChild(canvas);
+            currentChart = new Chart(canvas, {
+                type: 'bar',
+                data: {
+                    labels: Array.from({ length: 45 }, (_, i) => i + 1),
+                    datasets: [{
+                        label: '주 번호 빈도수',
+                        data: frequency,
+                        backgroundColor: 'rgba(0, 247, 255, 0.6)',
+                        borderColor: 'rgba(0, 247, 255, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: {
+                    indexAxis: 'y',
+                    scales: { x: { beginAtZero: true } }
+                }
+            });
+        }
+
+        // 짝수/홀수 분석
+        function analyzeEvenOdd() {
+            const lottoList = document.getElementById('lottoList');
+            lottoList.innerHTML = '<p>각 회차의 짝수/홀수 분포를 분석합니다.</p>';
+            if (currentChart) currentChart.destroy();
+
+            const distribution = { '0:6': 0, '1:5': 0, '2:4': 0, '3:3': 0, '4:2': 0, '5:1': 0, '6:0': 0 };
+            lottoData.forEach(entry => {
+                const evenCount = entry.numbers.filter(num => num % 2 === 0).length;
+                const oddCount = 6 - evenCount;
+                distribution[`${evenCount}:${oddCount}`]++;
+            });
+
+            const canvas = document.createElement('canvas');
+            lottoList.appendChild(canvas);
+            currentChart = new Chart(canvas, {
+                type: 'bar',
+                data: {
+                    labels: Object.keys(distribution),
+                    datasets: [{
+                        label: '짝수:홀수 분포',
+                        data: Object.values(distribution),
+                        backgroundColor: 'rgba(255, 0, 204, 0.6)',
+                        borderColor: 'rgba(255, 0, 204, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: { scales: { y: { beginAtZero: true } } }
+            });
+        }
+
+        // 합계 분석
+        function analyzeSum() {
+            const lottoList = document.getElementById('lottoList');
+            lottoList.innerHTML = '<p>6개 번호 합계 분포를 분석합니다.</p>';
+            if (currentChart) currentChart.destroy();
+
+            const sums = lottoData.map(entry => entry.numbers.reduce((a, b) => a + b, 0));
+            const bins = Array(26).fill(0); // 21~255를 10단위로 나누기
+            sums.forEach(sum => {
+                const bin = Math.min(Math.floor((sum - 21) / 10), 25);
+                bins[bin]++;
+            });
+
+            const canvas = document.createElement('canvas');
+            lottoList.appendChild(canvas);
+            currentChart = new Chart(canvas, {
+                type: 'bar',
+                data: {
+                    labels: Array.from({ length: 26 }, (_, i) => `${21 + i * 10}-${30 + i * 10}`),
+                    datasets: [{
+                        label: '합계 분포',
+                        data: bins,
+                        backgroundColor: 'rgba(0, 255, 204, 0.6)',
+                        borderColor: 'rgba(0, 255, 204, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: { scales: { y: { beginAtZero: true } } }
+            });
+        }
+
+        // 범위 분석
+        function analyzeRange() {
+            const lottoList = document.getElementById('lottoList');
+            lottoList.innerHTML = '<p>저(1-15), 중(16-30), 고(31-45) 범위 분포를 분석합니다.</p>';
+            if (currentChart) currentChart.destroy();
+
+            const ranges = { low: 0, mid: 0, high: 0 };
+            lottoData.forEach(entry => {
+                entry.numbers.forEach(num => {
+                    if (num <= 15) ranges.low++;
+                    else if (num <= 30) ranges.mid++;
+                    else ranges.high++;
+                });
+            });
+
+            const canvas = document.createElement('canvas');
+            lottoList.appendChild(canvas);
+            currentChart = new Chart(canvas, {
+                type: 'bar',
+                data: {
+                    labels: ['저(1-15)', '중(16-30)', '고(31-45)'],
+                    datasets: [{
+                        label: '범위별 숫자 빈도',
+                        data: [ranges.low, ranges.mid, ranges.high],
+                        backgroundColor: ['rgba(0, 247, 255, 0.6)', 'rgba(255, 0, 204, 0.6)', 'rgba(0, 255, 204, 0.6)'],
+                        borderColor: ['rgba(0, 247, 255, 1)', 'rgba(255, 0, 204, 1)', 'rgba(0, 255, 204, 1)'],
+                        borderWidth: 1
+                    }]
+                },
+                options: { scales: { y: { beginAtZero: true } } }
+            });
+        }
+
+        // 연속 숫자 분석
+        function analyzeConsecutive() {
+            const lottoList = document.getElementById('lottoList');
+            lottoList.innerHTML = '<p>연속 숫자 쌍의 빈도를 분석합니다.</p>';
+            if (currentChart) currentChart.destroy();
+
+            const consecutiveCounts = Array(6).fill(0); // 0~5 쌍
+            lottoData.forEach(entry => {
+                const sorted = [...entry.numbers].sort((a, b) => a - b);
+                let count = 0;
+                for (let i = 1; i < sorted.length; i++) {
+                    if (sorted[i] - sorted[i - 1] === 1) count++;
+                }
+                consecutiveCounts[count]++;
+            });
+
+            const canvas = document.createElement('canvas');
+            lottoList.appendChild(canvas);
+            currentChart = new Chart(canvas, {
+                type: 'bar',
+                data: {
+                    labels: ['0쌍', '1쌍', '2쌍', '3쌍', '4쌍', '5쌍'],
+                    datasets: [{
+                        label: '연속 숫자 쌍 빈도',
+                        data: consecutiveCounts,
+                        backgroundColor: 'rgba(255, 0, 204, 0.6)',
+                        borderColor: 'rgba(255, 0, 204, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: { scales: { y: { beginAtZero: true } } }
+            });
+        }
+
+        // 추천 번호
+        function recommendNumbers() {
+            const lottoList = document.getElementById('lottoList');
+            lottoList.innerHTML = '<p>상위 빈도수 기준 10개 추천 번호입니다.</p>';
+            if (currentChart) currentChart.destroy();
+
+            const frequency = Array(45).fill(0);
+            lottoData.forEach(entry => {
+                entry.numbers.forEach(num => frequency[num - 1]++);
+            });
+
+            const numberFreq = frequency.map((freq, idx) => ({ num: idx + 1, freq }))
+                .sort((a, b) => b.freq - a.freq)
+                .slice(0, 10);
+            const recommended = numberFreq.map(item => item.num);
+
+            const div = document.createElement('div');
+            div.className = 'lotto-entry';
+            div.textContent = `추천 번호 (상위 10개): ${recommended.join(', ')}`;
+            lottoList.appendChild(div);
+        }
+
         // 페이지 로드 시 데이터 표시 및 자동 갱신 설정
         window.onload = () => {
             displayLottoData();
-            updateLatestLotto(); // 초기 갱신
-            setInterval(updateLatestLotto, 7 * 24 * 60 * 60 * 1000); // 7일마다 갱신
+            updateLatestLotto();
+            setInterval(updateLatestLotto, 7 * 24 * 60 * 60 * 1000);
         };
     </script>
 </body>
