--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
             <button onclick="analyzeSum()">합계 분석</button>
             <button onclick="analyzeRange()">범위 분석</button>
             <button onclick="analyzeConsecutive()">연속 숫자 분석</button>
-            <button onclick="recommendNumbers()">추천 번호</button>
+            <button onclick="recommendNumbers()">기본 추천 번호</button>
+            <button onclick="advancedAnalysis()">고급 분석 및 추천</button>
             <button onclick="displayLottoData()">목록으로 돌아가기</button>
         </div>
         <div id="lottoList"></div>
@@ -485,7 +486,7 @@
             });
         }
 
-        // 추천 번호
+        // 기본 추천 번호 (빈도수 기반)
         function recommendNumbers() {
             const lottoList = document.getElementById('lottoList');
             lottoList.innerHTML = '<p>상위 빈도수 기준 10개 추천 번호입니다.</p>';
@@ -503,8 +504,123 @@
 
             const div = document.createElement('div');
             div.className = 'lotto-entry';
-            div.textContent = `추천 번호 (상위 10개): ${recommended.join(', ')}`;
+            div.textContent = `기본 추천 번호 (상위 10개): ${recommended.join(', ')}`;
             lottoList.appendChild(div);
+        }
+
+        // 고급 분석 및 추천 (몬테카를로 + 클러스터링)
+        function advancedAnalysis() {
+            const lottoList = document.getElementById('lottoList');
+            lottoList.innerHTML = '<p>몬테카를로 시뮬레이션과 클러스터링을 통한 고급 분석 결과입니다.</p>';
+            if (currentChart) currentChart.destroy();
+
+            if (lottoData.length === 0) {
+                lottoList.textContent = '분석을 위해 데이터가 필요합니다. 먼저 데이터를 가져오세요.';
+                return;
+            }
+
+            // 1. 빈도수 계산 (가중치로 사용)
+            const frequency = Array(45).fill(0);
+            lottoData.forEach(entry => {
+                entry.numbers.forEach(num => frequency[num - 1]++);
+            });
+            const totalFreq = frequency.reduce((a, b) => a + b, 0);
+            const weights = frequency.map(f => f / totalFreq);
+
+            // 2. 몬테카를로 시뮬레이션 (1000번 가상 추첨)
+            const simCount = 1000;
+            const simFreq = Array(45).fill(0);
+            for (let i = 0; i < simCount; i++) {
+                const simNumbers = weightedRandomSample(weights, 6);
+                simNumbers.forEach(num => simFreq[num - 1]++);
+            }
+
+            // 3. 클러스터링 (간단한 K-평균, 3개 클러스터)
+            const clusters = simpleKMeans(3);
+            const clusterFreq = clusters.map(cluster => {
+                const freq = Array(45).fill(0);
+                cluster.forEach(nums => nums.forEach(num => freq[num - 1]++));
+                return freq;
+            });
+
+            // 4. 추천 번호 도출 (시뮬레이션 + 클러스터링 결합)
+            const combinedFreq = simFreq.map((f, i) => f + clusterFreq.reduce((sum, cf) => sum + cf[i], 0));
+            const topNumbers = combinedFreq
+                .map((freq, idx) => ({ num: idx + 1, freq }))
+                .sort((a, b) => b.freq - a.freq)
+                .slice(0, 10)
+                .map(item => item.num);
+
+            // 5. 결과 표시
+            const div = document.createElement('div');
+            div.className = 'lotto-entry';
+            div.textContent = `고급 분석 추천 번호 (상위 10개): ${topNumbers.join(', ')}`;
+            lottoList.appendChild(div);
+
+            // 6. 시뮬레이션 빈도수 차트
+            const canvas = document.createElement('canvas');
+            lottoList.appendChild(canvas);
+            currentChart = new Chart(canvas, {
+                type: 'bar',
+                data: {
+                    labels: Array.from({ length: 45 }, (_, i) => i + 1),
+                    datasets: [{
+                        label: '시뮬레이션 빈도수',
+                        data: simFreq,
+                        backgroundColor: 'rgba(0, 247, 255, 0.6)',
+                        borderColor: 'rgba(0, 247, 255, 1)',
+                        borderWidth: 1
+                    }]
+                },
+                options: { indexAxis: 'y', scales: { x: { beginAtZero: true } } }
+            });
+        }
+
+        // 가중치 기반 랜덤 샘플링 함수
+        function weightedRandomSample(weights, count) {
+            const result = new Set();
+            while (result.size < count) {
+                let rand = Math.random();
+                let cumulative = 0;
+                for (let i = 0; i < weights.length; i++) {
+                    cumulative += weights[i];
+                    if (rand <= cumulative) {
+                        result.add(i + 1);
+                        break;
+                    }
+                }
+            }
+            return Array.from(result);
+        }
+
+        // 간단한 K-평균 클러스터링
+        function simpleKMeans(k) {
+            const data = lottoData.map(entry => entry.numbers);
+            if (data.length < k) return [data]; // 데이터 부족 시 단일 클러스터 반환
+            const centroids = data.slice(0, k);
+            for (let iter = 0; iter < 10; iter++) {
+                const clusters = Array(k).fill().map(() => []);
+                data.forEach(numbers => {
+                    const distances = centroids.map(c => euclideanDistance(c, numbers));
+                    const closest = distances.indexOf(Math.min(...distances));
+                    clusters[closest].push(numbers);
+                });
+                centroids.forEach((_, i) => {
+                    if (clusters[i].length > 0) {
+                        centroids[i] = averageNumbers(clusters[i]);
+                    }
+                });
+            }
+            return clusters.filter(c => c.length > 0); // 빈 클러스터 제거
+        }
+
+        function euclideanDistance(a, b) {
+            return Math.sqrt(a.reduce((sum, ai, i) => sum + (ai - b[i]) ** 2, 0));
+        }
+
+        function averageNumbers(cluster) {
+            const len = cluster.length;
+            return cluster[0].map((_, i) => Math.round(cluster.reduce((sum, nums) => sum + nums[i], 0) / len));
         }
 
         // 페이지 로드 시 데이터 표시 및 자동 갱신 설정
