--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         </div>
     </div>
     <div class="ticker">
-        <span>Data-Driven Lotto Analysis - Powered by xAI - Cyberpunk Edition</span>
+        <span>Data-Driven Lotto Analysis - Powered by Mr.Dong - Cyberpunk Edition</span>
     </div>
 
     <script>
