--- a/index.html
+++ b/index.html
@@ -174,6 +174,7 @@
             .container { grid-template-columns: 1fr; }
             h1 { font-size: 2em; }
             button { padding: 10px 20px; font-size: 0.9em; }
+            .recommendation { font-size: 0.9em; }
         }
     </style>
 </head>
@@ -634,7 +635,7 @@
             });
         }
 
-        // 봇 추천 함수 (로딩 바 포함, 10개 로또 세트)
+        // 봇 추천 함수 (정교한 분석, 10개 로또 세트)
         function botRecommend() {
             const botOutput = document.getElementById('botOutput');
             const loadingBar = document.getElementById('loadingBar');
@@ -646,7 +647,7 @@
             }
 
             // 로딩 바 표시
-            botOutput.innerHTML = '<p>Analyzing...</p>';
+            botOutput.innerHTML = '<p>Analyzing with Advanced Algorithm...</p>';
             loadingBar.style.display = 'block';
             loadingProgress.style.width = '0';
 
@@ -662,18 +663,58 @@
                 const totalFreq = frequency.reduce((a, b) => a + b, 0);
                 const weights = frequency.map(f => f / totalFreq);
 
+                // 과거 데이터 패턴 분석
+                const pastSums = lottoData.map(entry => entry.numbers.reduce((a, b) => a + b, 0));
+                const avgSum = pastSums.reduce((a, b) => a + b, 0) / pastSums.length; // 평균 합계
+                const pastEvenOdd = lottoData.map(entry => ({
+                    even: entry.numbers.filter(n => n % 2 === 0).length,
+                    odd: entry.numbers.filter(n => n % 2 !== 0).length
+                }));
+
                 botOutput.innerHTML = '';
-                for (let set = 1; set <= 10; set++) {
-                    const recommended = weightedRandomSample(weights, 6).sort((a, b) => a - b); // 6개 번호 세트
-                    const div = document.createElement('div');
-                    div.className = 'recommendation';
-                    div.textContent = `Set ${set}: ${recommended.join(', ')}`;
-                    botOutput.appendChild(div);
+                const recommendedSets = new Set(); // 중복 방지
+                let attempts = 0;
+
+                while (recommendedSets.size < 10 && attempts < 50) { // 최대 50번 시도
+                    const candidate = weightedRandomSample(weights, 6).sort((a, b) => a - b);
+                    const sum = candidate.reduce((a, b) => a + b, 0);
+                    const evenCount = candidate.filter(n => n % 2 === 0).length;
+                    const oddCount = 6 - evenCount;
+                    const consecutive = countConsecutive(candidate);
+
+                    // 필터링 조건: 합계 100~180, 짝수/홀수 2:4~4:2, 연속 번호 0~2
+                    if (sum >= 100 && sum <= 180 && 
+                        evenCount >= 2 && evenCount <= 4 && 
+                        consecutive <= 2) {
+                        const setString = candidate.join(',');
+                        if (!recommendedSets.has(setString)) {
+                            recommendedSets.add(setString);
+                            const div = document.createElement('div');
+                            div.className = 'recommendation';
+                            div.textContent = `Set ${recommendedSets.size}: ${candidate.join(', ')} (Sum: ${sum}, Even:Odd = ${evenCount}:${oddCount}, Consecutive: ${consecutive})`;
+                            botOutput.appendChild(div);
+                        }
+                    }
+                    attempts++;
+                }
+
+                if (recommendedSets.size < 10) {
+                    botOutput.innerHTML += '<p>Warning: Could not generate 10 unique sets meeting criteria.</p>';
                 }
 
                 // 로딩 바 숨기기
                 loadingBar.style.display = 'none';
             }, 2000);
+        }
+
+        // 연속 번호 카운트 함수
+        function countConsecutive(numbers) {
+            const sorted = [...numbers].sort((a, b) => a - b);
+            let count = 0;
+            for (let i = 1; i < sorted.length; i++) {
+                if (sorted[i] - sorted[i - 1] === 1) count++;
+            }
+            return count;
         }
 
         // 전략별 번호 생성 함수
