--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             background: linear-gradient(135deg, #0d0d1b 0%, #1f2a44 100%);
-            color: #e0e0e0;
+            color: #000000;
             font-family: 'Orbitron', sans-serif;
             margin: 0;
             padding: 0;
